--- a/albumPage.html
+++ b/albumPage.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <title>Album List</title>
+    <link rel = "icon" href = 
+"https://cdn3.iconfinder.com/data/icons/popular-services-brands/512/spotify-512.png" 
+        type = "image/x-icon">
     <link rel="stylesheet" href="albumStyle.css">
   </head>
   <body>
@@ -262,7 +265,8 @@
       </tbody>
     </table>
 
-  
+
+    
 
     
 
